--- a/bi.qmd
+++ b/bi.qmd
@@ -24,12 +24,12 @@ editor_options:
 
 ```{r}
 #| label: ojs-define
-ojs_define(Analyse_Ordre)
+ojs_define(tbl1_Ordre_T)
 ```
 
 ```{ojs}
 //| label: ojs-transpose
-Data_BI = transpose(Analyse_Ordre)
+Data_BI = transpose(tbl1_Ordre_T)
 ```
 
 ```{ojs}
@@ -243,9 +243,9 @@ BilletDisciplinAkt_V  <- "Sandpapir"
 BilletSpilFormatAkt_V <- "Single"
 BilletRaekkeAkt_V     <- "Åben"
 
-DataAkt_T <- Analyse_Ordre %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
-DataEventAarAkt_T <- DataEventAar_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
-DataBilletAkt_T <- DataBillet_T %>% filter(
+DataAkt_T <- tbl1_Ordre_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
+tbl2_EventAarAkt_T <- tbl2_EventAar_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
+DataBilletAkt_T <- tbl2_Billet_T %>% filter(
   grepl(InputEventAarAkt_V, EventAar_RD) &
   grepl(BilletDisciplinAkt_V, BilletDisciplin_RD) &
   grepl(BilletRaekkeAkt_V, BilletRaekke_RD) &
@@ -255,10 +255,10 @@ DataBilletAkt_T <- DataBillet_T %>% filter(
 ```{r}
 #| output: asis
 cat(paste0(
-"<i style=font-size:80%>", DataBilletAkt_T$StatDeltRatingKatAntal_DW, "<br>", DataBilletAkt_T$StatDeltRatingAntal_DW, "<br>", DataBilletAkt_T$StatForskudtTilAntal_DW, "<br>", DataBilletAkt_T$StatOekonomiAntal_DW, "<br>", DataEventAarAkt_T$EventAarAabningDatoTid_RD, "</i>"))
+"<i style=font-size:80%>", DataBilletAkt_T$StatDeltRatingKatAntal_DW, "<br>", DataBilletAkt_T$StatDeltRatingAntal_DW, "<br>", DataBilletAkt_T$StatForskudtTilAntal_DW, "<br>", DataBilletAkt_T$StatOekonomiAntal_DW, "<br>", tbl2_EventAarAkt_T$EventAarAabningDatoTid_RD, "</i>"))
 ```
 
-`{r} DataEventAarAkt_T$EventAarAabningDatoTid_RD`
+`{r} tbl2_EventAarAkt_T$EventAarAabningDatoTid_RD`
 
 ```{r}
 #| output: asis
@@ -306,7 +306,7 @@ datatable(
 ```
 
 ```{r}
-DataPraemiePenge_T %>%
+tbl3_PraemiePenge_T %>%
   filter(grepl(InputEventAarAkt_V, EventAar_RD)) %>%
   select(` `, Præmiepenge, Pct.) %>%
   datatable(
@@ -318,7 +318,7 @@ DataPraemiePenge_T %>%
 ```
 
 ```{r}
-DataPraemiePenge_T %>%
+tbl3_PraemiePenge_T %>%
   filter(grepl(InputEventAarAkt_V, EventAar_RD)) %>%
   select(` `, Præmiepenge, Pct.) %>%
   datatable(
@@ -330,7 +330,7 @@ DataPraemiePenge_T %>%
 ```
 
 ```{r}
-DataKlubMangel_T <- Analyse_Ordre %>%
+DataKlubMangel_T <- tbl1_Ordre_T %>%
 	anti_join(y = DataAkt_T, by = "Klub_RD") %>%
 	group_by(EventAar_RD, Klub_RD) %>%
 	slice(which.max(OrdreDatoTid_RD)) %>%
@@ -362,14 +362,14 @@ if(nrow(DataKlubMangel_T) == 0) {
 					IkonPerson_V, " Manglende klubber<br>",
 					"<i style=font-size:80%>Sorteret efter år, region og klub</i>")) %>%
 		kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
-		row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
+		row_spec(0, background = tbl2_EventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 		row_spec(which(grepl("Afbud", DataKlubMangel_T$OrdreStatusSimpelKat_RD)),
-						 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
+						 strikeout = T, color = tbl2_EventAarAkt_T$EventAarFarve1_RD) %>%
 		column_spec(1:5, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V, ";")) %>%
 		remove_column(6:7)
 }
 
-DataDeltMangel_T <- Analyse_Ordre %>%
+DataDeltMangel_T <- tbl1_Ordre_T %>%
 	anti_join(y = DataAkt_T, by = "DeltID_RD") %>%
 	group_by(EventAar_RD, DeltID_RD) %>%
 	slice(which.max(OrdreDatoTid_RD)) %>%
@@ -402,9 +402,9 @@ if(nrow(DataDeltMangel_T) == 0) {
 				IkonPerson_V, " Manglende deltagere<br>",
 				"<i style=font-size:80%>Sorteret efter klubantal og år</i>")) %>%
 	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
-	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
+	row_spec(0, background = tbl2_EventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltMangel_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
+					 strikeout = T, color = tbl2_EventAarAkt_T$EventAarFarve1_RD) %>%
 	column_spec(1:4, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V, ";")) %>%
 	remove_column(5:6)
 }
