--- a/indbydelse-tilmelding-2023.qmd
+++ b/indbydelse-tilmelding-2023.qmd
@@ -6,24 +6,24 @@ source(file = "_input.R")
 ```{r}
 #| label: kildefil-filter
 InputEventAarAkt_V <- "Ping Pong DM 2023"
-DataAkt_T <- Analyse_Ordre %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
-DataEventAarAkt_T <- DataEventAar_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
-DataBilletKatAkt_T <- DataBilletKat_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
-DataPraemiePengeAkt_T <- DataPraemiePenge_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
+DataAkt_T <- tbl1_Ordre_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
+tbl2_EventAarAkt_T <- tbl2_EventAar_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
+DataBilletKatAkt_T <- tbl3_BilletKat_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
+DataPraemiePengeAkt_T <- tbl3_PraemiePenge_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
 ```
 
 ---
 title: "<iconify-icon icon=mdi:tags></iconify-icon> <u>Indbydelse & tilmelding</u>"
 subtitle: |
   `r paste0(
-  "<b style=font-size:140%>", DataEventAarAkt_T$EventAar_RD, "</b>",
+  "<b style=font-size:140%>", tbl2_EventAarAkt_T$EventAar_RD, "</b>",
   "<br>",
   "<i style=font-size:110%>",
-  "<b>Afholdes ", DataEventAarAkt_T$EventAarDato_DW, " i ", DataEventAarAkt_T$EventAarStedURL_DW,
+  "<b>Afholdes ", tbl2_EventAarAkt_T$EventAarDato_DW, " i ", tbl2_EventAarAkt_T$EventAarStedURL_DW,
   "</b></i>",
   "<br>",
   "<i style=font-size:80%>Først til mølle-princip ∙ Tilmeldingsfrist ",
-  DataEventAarAkt_T$EventAarFristDato_DW_DMAA_DW, "</i>")`
+  tbl2_EventAarAkt_T$EventAarFristDato_DW_DMAA_DW, "</i>")`
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -32,8 +32,8 @@ editor_options:
 ```{r}
 #| label: info-nedtaelling-plakat
 #| output: asis
-cat(knitr::raw_html(DataEventAarAkt_T$InfoNedtælling_DW))
-cat(DataEventAarAkt_T$InfoPlakatCTA_DW)
+cat(knitr::raw_html(tbl2_EventAarAkt_T$InfoNedtælling_DW))
+cat(tbl2_EventAarAkt_T$InfoPlakatCTA_DW)
 ```
 
 # `r paste(IkonIndbydelse_V, "Indbydelse")`
@@ -44,7 +44,7 @@ cat(DataEventAarAkt_T$InfoPlakatCTA_DW)
 ::: {style="font-style:italic"}
 ```{r}
 #| output: asis
-cat(paste0("[Hørning Bordtennisklub](http://hoerningbtk.dk){target=_blank}, i samarbejde med [Bordtennis Danmark](https://bordtennisdanmark.dk){target=_blank} og [DGI](https://www./dgi.dk/bordtennis){target=_blank}, indbyder til det ", DataEventAarAkt_T$EventAarNr_RD, ". DANSKE MESTERSKABER I PING PONG ", DataEventAarAkt_T$EventAarStartDatoTid_DW, " (bordtennis på lige vilkår med sandpapirsbat) samt efterfølgende FEST OM AFTENEN ", DataEventAarAkt_T$EventAarDato_DW, " i ", DataEventAarAkt_T$EventAarStedURL_DW, ". Uanset om du er ungdomsspiller, seniorspiller, veteranspiller eller aldrig har prøvet Ping Pong/bordtennis før, så kan du stille op (ALLE kan deltage uanset alder, køn, niveau eller licens)^[<b>ALLE kan deltage</b>: Da turneringen er et dansk mesterskab, skal man enten være (1) dansk statsborger eller (2) have boet i Danmark i minimum de seneste fem år (skal kunne dokumenteres af spilleren). Er dette ikke opfyldt, vil det være muligt at deltage udelukkende i puljespillet, hvor ens resultater ikke tæller med i puljeregnskabet (tilmelding stadig påkrævet).]. Eventet er før sommerferien og som noget af det sidste af indeværende bordtennissæson, da det ligger i uge ", DataEventAarAkt_T$EventAarStartDato_DW_Uge_DW , ". Der er lagt op til en masse fede kampe på lige vilkår i sandpapirsdisciplinen med stemningsmusik og/eller et brag af en fest om aftenen, som alt sammen fås til en overkommelig pris."))
+cat(paste0("[Hørning Bordtennisklub](http://hoerningbtk.dk){target=_blank}, i samarbejde med [Bordtennis Danmark](https://bordtennisdanmark.dk){target=_blank} og [DGI](https://www./dgi.dk/bordtennis){target=_blank}, indbyder til det ", tbl2_EventAarAkt_T$EventAarNr_RD, ". DANSKE MESTERSKABER I PING PONG ", tbl2_EventAarAkt_T$EventAarStartDatoTid_DW, " (bordtennis på lige vilkår med sandpapirsbat) samt efterfølgende FEST OM AFTENEN ", tbl2_EventAarAkt_T$EventAarDato_DW, " i ", tbl2_EventAarAkt_T$EventAarStedURL_DW, ". Uanset om du er ungdomsspiller, seniorspiller, veteranspiller eller aldrig har prøvet Ping Pong/bordtennis før, så kan du stille op (ALLE kan deltage uanset alder, køn, niveau eller licens)^[<b>ALLE kan deltage</b>: Da turneringen er et dansk mesterskab, skal man enten være (1) dansk statsborger eller (2) have boet i Danmark i minimum de seneste fem år (skal kunne dokumenteres af spilleren). Er dette ikke opfyldt, vil det være muligt at deltage udelukkende i puljespillet, hvor ens resultater ikke tæller med i puljeregnskabet (tilmelding stadig påkrævet).]. Eventet er før sommerferien og som noget af det sidste af indeværende bordtennissæson, da det ligger i uge ", tbl2_EventAarAkt_T$EventAarStartDato_DW_Uge_DW , ". Der er lagt op til en masse fede kampe på lige vilkår i sandpapirsdisciplinen med stemningsmusik og/eller et brag af en fest om aftenen, som alt sammen fås til en overkommelig pris."))
 ```
 :::
 
@@ -58,11 +58,11 @@ DataBilletKatAkt_T %>%
         "<i style=font-size:80%>", length(DataBilletKatAkt_T$Billettype), " valgmuligheder ved tilmelding.</i>")) %>%
 	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
 	footnote(paste0(
-    "Først til mølle-princip. Tilmeldingsfrist ", DataEventAarAkt_T$EventAarFristDato_DW_DMAA_DW, ".<br>",
+    "Først til mølle-princip. Tilmeldingsfrist ", tbl2_EventAarAkt_T$EventAarFristDato_DW_DMAA_DW, ".<br>",
     "Ved tilmelding modtages bekræftelsesmail.<br>",
     "Mikrogebyrer pålægges alle priser."),
     general_title = "", escape = F) %>%
-	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
+	row_spec(0, background = tbl2_EventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	column_spec(1:3, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V, ";")) %>%
   remove_column(4)
 
@@ -79,35 +79,35 @@ data.frame(
 		IkonFest_V),
 	"Klokkeslæt" = c(
 		paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(-90), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+465), "%H:%M")),
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(-90), "%H:%M"),"-",
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+465), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(-90), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(-15), "%H:%M")),
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(-90), "%H:%M"),"-",
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(-15), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(-15), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+0), "%H:%M")),
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(-15), "%H:%M"),"-",
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+0), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+0), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+180), "%H:%M")),
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+0), "%H:%M"),"-",
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+180), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+180), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+330), "%H:%M")),
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+180), "%H:%M"),"-",
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+330), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+330), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+450), "%H:%M")),
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+330), "%H:%M"),"-",
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+450), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+450), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+465), "%H:%M")),
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+450), "%H:%M"),"-",
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+465), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+465), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+510), "%H:%M")),
-    paste("Fra", format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+510), "%H:%M"))),
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+465), "%H:%M"),"-",
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+510), "%H:%M")),
+    paste("Fra", format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(+510), "%H:%M"))),
 	"Type" = c(
-		paste0("<a style=color:#000000;text-decoration:none href=indbydelse-tilmelding-2023.qmd#ping-pong", ">DM i Ping Pong ", DataEventAarAkt_T$EventAarStartDatoTid_DW, "</a>"),
+		paste0("<a style=color:#000000;text-decoration:none href=indbydelse-tilmelding-2023.qmd#ping-pong", ">DM i Ping Pong ", tbl2_EventAarAkt_T$EventAarStartDatoTid_DW, "</a>"),
     paste(
     	"Mulighed for opvarmning.<br><b>Check-in senest",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(-30), "%H:%M."), "</b>"),
+    	format(tbl2_EventAarAkt_T$EventAarStartDatoTid_DW + minutes(-30), "%H:%M."), "</b>"),
     "Velkomst og gruppebillede.",
     "Puljespil.",
     "A-/B-slutspil.",
@@ -122,9 +122,9 @@ data.frame(
         "<i style=font-size:75%>Bemærk: Tidsplan kan ændres en smule alt efter deltagerantal.</i>")) %>%
 	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
 	column_spec(2, extra_css = "white-space:nowrap;") %>%
-	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
+	row_spec(0, background = tbl2_EventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(6, bold = T) %>%
-	row_spec(c(1, 9), bold = T, background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000",
+	row_spec(c(1, 9), bold = T, background = tbl2_EventAarAkt_T$EventAarFarve2_RD, color = "#000000",
   extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V, ";border-bottom:0.7px solid ", TabelFarveKant_V, ";")) %>%
 	column_spec(2:3, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V, ";"))
 ```
@@ -146,11 +146,11 @@ IkonMedbring_V, " <b>Medbring</b>: Til turneringen medbringes kun sportstøj og 
 
 "</p><p>",
 
-IkonTransport_V, " <b>Offentlig transport</b>: Der er gode tog- og busforbindelser til Hørning (10 min. med tog fra Aarhus Hovedbanegård). Hørning station ligger kun 1,5 km fra ", DataEventAarAkt_T$EventAarSted_RD, ". Se muligheder for offentlig transport på Rejseplanen [<b>HER</b>](https://rejseplanen.dk){target=_blank}.",
+IkonTransport_V, " <b>Offentlig transport</b>: Der er gode tog- og busforbindelser til Hørning (10 min. med tog fra Aarhus Hovedbanegård). Hørning station ligger kun 1,5 km fra ", tbl2_EventAarAkt_T$EventAarSted_RD, ". Se muligheder for offentlig transport på Rejseplanen [<b>HER</b>](https://rejseplanen.dk){target=_blank}.",
 
 "</p><p>",
 
-IkonParkering_V, " <b>Parkering</b>: Mange parkeringspladser og gratis parkering ved ", DataEventAarAkt_T$EventAarSted_RD, ".",
+IkonParkering_V, " <b>Parkering</b>: Mange parkeringspladser og gratis parkering ved ", tbl2_EventAarAkt_T$EventAarSted_RD, ".",
 
 "</p><p>",
 
@@ -158,7 +158,7 @@ IkonOvernatning_V, " <b>Overnatning</b>: Gode muligheder for at booke overnatnin
 
 "</p><p>",
 
-IkonRefusion_V, " <b>Refusion</b>: Tilmelding er ikke bindende, hvorfor evt. refusion er muligt frem til og med tilmeldingsfristen ", DataEventAarAkt_T$EventAarFristDato_DW_DMAA_DW, " ved henvendelse til kontaktpersonen. Ønskes alle billetter refunderet, vil refusion ske hurtigst muligt. Hvis der ønskes refusion af enkeltbilletter, vil refusion ske umiddelbart efter eventet. Mikrogebyrer refunderes ikke.",
+IkonRefusion_V, " <b>Refusion</b>: Tilmelding er ikke bindende, hvorfor evt. refusion er muligt frem til og med tilmeldingsfristen ", tbl2_EventAarAkt_T$EventAarFristDato_DW_DMAA_DW, " ved henvendelse til kontaktpersonen. Ønskes alle billetter refunderet, vil refusion ske hurtigst muligt. Hvis der ønskes refusion af enkeltbilletter, vil refusion ske umiddelbart efter eventet. Mikrogebyrer refunderes ikke.",
 
 "</p>"))
 ```
@@ -169,7 +169,7 @@ IkonRefusion_V, " <b>Refusion</b>: Tilmelding er ikke bindende, hvorfor evt. ref
 ```{r}
 #| layout-ncol: 3
 data.frame(
-  "1" = paste0("<img src=filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/kontaktperson.png height=66 style=border-radius:10px>"),
+  "1" = paste0("<img src=filer/event/", fun_egen_sti(tbl2_EventAarAkt_T$EventAar_RD), "/kontaktperson.png height=66 style=border-radius:10px>"),
   "2" = paste0(
   	IkonPerson_V, " Benjamin Sørensen",
   	"<br>",
@@ -186,7 +186,7 @@ data.frame(
   column_spec(1:2, extra_css = "border:hidden;")
 
 data.frame(
-  "1" = paste0("<img src=filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/staevneleder.png height=66 style=border-radius:10px>"),
+  "1" = paste0("<img src=filer/event/", fun_egen_sti(tbl2_EventAarAkt_T$EventAar_RD), "/staevneleder.png height=66 style=border-radius:10px>"),
   "2" = paste0(
   	IkonPerson_V, " Ole Munck Christensen",
   	"<br>",
@@ -203,8 +203,8 @@ data.frame(
   column_spec(1:2, extra_css = "border:hidden;")
 
 data.frame(
-  "1" = paste0("<img src=filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/lokation.png height=66 style=border-radius:10px>"),
-  "2" = DataEventAarAkt_T$EventAarStedAdrPostnrURL_DW,
+  "1" = paste0("<img src=filer/event/", fun_egen_sti(tbl2_EventAarAkt_T$EventAar_RD), "/lokation.png height=66 style=border-radius:10px>"),
+  "2" = tbl2_EventAarAkt_T$EventAarStedAdrPostnrURL_DW,
   check.names = F) %>%
   kbl(col.names = NULL, align = "l", escape = F,
       caption = paste0(
@@ -238,7 +238,7 @@ Turneringen afvikles som én åben singlerække på fair vis efter snake-system 
 Puljerne dannes på fair vis efter snake-system uden klubhensyn efter følgende prioritering:
 
 1.  Nr. 1-4 seedes efter placeringerne i "Final 4" i A-slutspil ved sidst afholdte DM`r "^[<b>Resultater sidste DM</b>: Ved sidste DM i 2022 i Sisu/MBK var <q>Final 4</q> deltagerne:<br>Nr. 1. Benjamin Sørensen, Hørning BTK.<br>Nr. 2. Simon Larsen, BTK Viby.<br>Nr. 3. Mads Larsen, Silkeborg BTK.<br>Nr. 4. Emil Madsen, Hørning BTK.]"`.
-2.  `r paste0("[Ratingopdateringen i bordtennis](https://bordtennisportalen.dk/DBTU/Ranglister){target=_blank} pr. ", DataEventAarAkt_T$EventAarRatingDato_RD_DMAA_DW, ".")`
+2.  `r paste0("[Ratingopdateringen i bordtennis](https://bordtennisportalen.dk/DBTU/Ranglister){target=_blank} pr. ", tbl2_EventAarAkt_T$EventAarRatingDato_RD_DMAA_DW, ".")`
 3.  Skøn og lodtrækning.
 
 I det videre spil dannes seedningerne på baggrund af placeringerne fra puljespillet.
@@ -259,7 +259,7 @@ flowchart TD
 
 ```{r}
 #| output: asis
-cat(DataEventAarAkt_T$InfoTipRegler_DW)
+cat(tbl2_EventAarAkt_T$InfoTipRegler_DW)
 ```
 :::
 ::::
@@ -277,7 +277,7 @@ cat(DataEventAarAkt_T$InfoTipRegler_DW)
 ::: {.g-col-12 .g-col-md-4}
 ```{r}
 #| output: asis
-cat(paste0("![](filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/bat-bold.png){width=15em}"))
+cat(paste0("![](filer/event/", fun_egen_sti(tbl2_EventAarAkt_T$EventAar_RD), "/bat-bold.png){width=15em}"))
 ```
 :::
 :::::
@@ -286,7 +286,7 @@ cat(paste0("![](filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/ba
 
 :::::: {.grid style="font-style:italic"}
 ::: {.g-col-12 .g-col-md-8}
-[**NYHED**]{.underline}**! 2 kvalifikationspladser til [VERDENSMESTERSKABERNE I PING PONG]{.underline} i Mexico City fra den 4. til 6. januar 2024 med en præmiesum på [\$36.000]{.underline} fordelt på SANDPAPIR, HARDBAT og TRÆBAT. Ekstra tilskud hertil på \$500 til 1. pladsen fra DM. Ny arrangør for VM i Ping Pong er International Classic Table Tennis Federation (ICTTF), som erstatter det ellers tidligere velkendte format fra Alexandra Palace i London arrangeret af Matchroom. Se mere om det nye VM-koncept i indbydelsen `r paste0("[HER](filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/ping-pong-world-cup-indbydelse.pdf){target=_blank}")`**.
+[**NYHED**]{.underline}**! 2 kvalifikationspladser til [VERDENSMESTERSKABERNE I PING PONG]{.underline} i Mexico City fra den 4. til 6. januar 2024 med en præmiesum på [\$36.000]{.underline} fordelt på SANDPAPIR, HARDBAT og TRÆBAT. Ekstra tilskud hertil på \$500 til 1. pladsen fra DM. Ny arrangør for VM i Ping Pong er International Classic Table Tennis Federation (ICTTF), som erstatter det ellers tidligere velkendte format fra Alexandra Palace i London arrangeret af Matchroom. Se mere om det nye VM-koncept i indbydelsen `r paste0("[HER](filer/event/", fun_egen_sti(tbl2_EventAarAkt_T$EventAar_RD), "/ping-pong-world-cup-indbydelse.pdf){target=_blank}")`**.
 
 -   Der er også en gave til den **yngste**- og **ældste** Ping Pong deltager for at hylde mangfoldigheden.
 -   Pokaler/diplomer uddeles til alle gave-/præmietagere.
@@ -296,7 +296,7 @@ cat(paste0("![](filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/ba
 ```{r}
 #| output: asis
 cat(paste0(
-"![](filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "//ping-pong-world-cup-logo.png){width=20em}"))
+"![](filer/event/", fun_egen_sti(tbl2_EventAarAkt_T$EventAar_RD), "//ping-pong-world-cup-logo.png){width=20em}"))
 ```
 :::
 
@@ -309,15 +309,15 @@ if(nrow(DataPraemiePengeAkt_T) == 0) {
     kbl(col.names = NA, align = "lrr", escape = F,
         caption = paste(IkonPenge_V, "Præmiepenge")) %>%
     kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
-    row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
+    row_spec(0, background = tbl2_EventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
     row_spec(which(DataPraemiePengeAkt_T$PraemieRank_DW == "1"),
-             bold = T, background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000") %>%
+             bold = T, background = tbl2_EventAarAkt_T$EventAarFarve2_RD, color = "#000000") %>%
     row_spec(which(DataPraemiePengeAkt_T$PraemieRank_DW == "2"),
-             background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000") %>%
+             background = tbl2_EventAarAkt_T$EventAarFarve2_RD, color = "#000000") %>%
     row_spec(which(DataPraemiePengeAkt_T$PraemieRank_DW == "3"),
-             background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000") %>%
+             background = tbl2_EventAarAkt_T$EventAarFarve2_RD, color = "#000000") %>%
     add_indent(which(DataPraemiePengeAkt_T$PraemieRank_DW == "4")) %>%
-    column_spec(3, italic = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
+    column_spec(3, italic = T, color = tbl2_EventAarAkt_T$EventAarFarve1_RD) %>%
     footnote(paste(
       "Præmiesum på", distinct(filter(DataPraemiePengeAkt_T, PraemieRank_DW == 1), Præmiepenge),
       "er under<br>forudsætning af minimum 64 Ping Pong<br>deltagere."),
@@ -351,7 +351,7 @@ Aldersgrænsen for festen er 16 år (bytur 18 år). Hvis man er 16 eller 17 år,
 ```{r}
 #| output: asis
 cat(paste0(
-"![](filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "//fest-om-aftenen.png){width=20em}"))
+"![](filer/event/", fun_egen_sti(tbl2_EventAarAkt_T$EventAar_RD), "//fest-om-aftenen.png){width=20em}"))
 ```
 
 ::: {.callout-note style="font-style:italic"}
@@ -360,7 +360,7 @@ cat(paste0(
 ```{r}
 #| output: asis
 cat(paste0(
-IkonOvernatning_V, " Se forslag til evt. overnatning under <q>Intro, tidsplan & praktisk</q> [<b>HER</b>](indbydelse-tilmelding-", DataEventAarAkt_T$EventAarStartDatoTid_DW, ".qmd#intro-tidsplan-praktisk)."))
+IkonOvernatning_V, " Se forslag til evt. overnatning under <q>Intro, tidsplan & praktisk</q> [<b>HER</b>](indbydelse-tilmelding-", tbl2_EventAarAkt_T$EventAarStartDatoTid_DW, ".qmd#intro-tidsplan-praktisk)."))
 ```
 :::
 :::::
@@ -375,13 +375,13 @@ IkonOvernatning_V, " Se forslag til evt. overnatning under <q>Intro, tidsplan & 
 #| output: asis
 cat(paste0(
 "<p>",
-"<b style=font-size:140%>", DataEventAarAkt_T$EventAar_RD, "</b>",
+"<b style=font-size:140%>", tbl2_EventAarAkt_T$EventAar_RD, "</b>",
 "<br>",
 "<i style=font-size:110%>",
-"<b>Afholdes ", DataEventAarAkt_T$EventAarDato_DW, " i ", DataEventAarAkt_T$EventAarStedURL_DW, "</b></i>",
+"<b>Afholdes ", tbl2_EventAarAkt_T$EventAarDato_DW, " i ", tbl2_EventAarAkt_T$EventAarStedURL_DW, "</b></i>",
 "<br>",
 "<i style=font-size:80%>Først til mølle-princip ∙ Tilmeldingsfrist ",
-DataEventAarAkt_T$EventAarFristDato_DW_DMAA_DW, "</i>",
+tbl2_EventAarAkt_T$EventAarFristDato_DW_DMAA_DW, "</i>",
 "</p>",
 IkonBillet_V, " <i>Der er let tilmelding og betaling med betalingskort her</i> ", IkonHåndNed_V,
 "<br>",
@@ -394,7 +394,7 @@ IkonBillet_V, " <i>Der er let tilmelding og betaling med betalingskort her</i> "
 ```{r}
 #| output: asis
 cat(paste0(
-"<div class=ticketbutler-iframe data-type=EVENT data-domain=billetfix.dk data-slug=dm-i-ping-pong-", DataEventAarAkt_T$EventAarStartDatoTid_DW, "></div><script type=text/javascript src=https://unpkg.com/@ticketbutler/event-embedder@latest/dist/index.js></script>"))
+"<div class=ticketbutler-iframe data-type=EVENT data-domain=billetfix.dk data-slug=dm-i-ping-pong-", tbl2_EventAarAkt_T$EventAarStartDatoTid_DW, "></div><script type=text/javascript src=https://unpkg.com/@ticketbutler/event-embedder@latest/dist/index.js></script>"))
 ```
 
 </div>
@@ -403,7 +403,7 @@ cat(paste0(
 ```{r}
 #| output: asis
 cat(paste0(
-"(Hvis indlejret tilmelding ikke virker, klik [<b>HER</b>](https://billetfix.dk/da/e/dm-i-ping-pong-", DataEventAarAkt_T$EventAarStartDatoTid_DW, "){target=_blank})"))
+"(Hvis indlejret tilmelding ikke virker, klik [<b>HER</b>](https://billetfix.dk/da/e/dm-i-ping-pong-", tbl2_EventAarAkt_T$EventAarStartDatoTid_DW, "){target=_blank})"))
 ```
 :::
 
@@ -414,7 +414,7 @@ cat(paste0(
 
 ```{r}
 #| output: asis
-cat(DataEventAarAkt_T$InfoTipPraemierDeltagere_DW)
+cat(tbl2_EventAarAkt_T$InfoTipPraemierDeltagere_DW)
 ```
 :::
 
@@ -423,7 +423,7 @@ cat(DataEventAarAkt_T$InfoTipPraemierDeltagere_DW)
 
 ```{r}
 #| output: asis
-cat(paste0("Da en del af Ping Pong konceptet er, at ALLE kan stille op (uanset alder, køn, niveau eller licens), foregår tilmelding og betaling her på siden og derfor udenom BordtennisPortalen. Ved tilmelding modtages bekræftelsesmail (tilmelding er ikke bindende, hvorfor evt. refusion er muligt frem til og med tilmeldingsfristen ", DataEventAarAkt_T$EventAarFristDato_DW_DMAA_DW, "). Først til mølle-princip."))
+cat(paste0("Da en del af Ping Pong konceptet er, at ALLE kan stille op (uanset alder, køn, niveau eller licens), foregår tilmelding og betaling her på siden og derfor udenom BordtennisPortalen. Ved tilmelding modtages bekræftelsesmail (tilmelding er ikke bindende, hvorfor evt. refusion er muligt frem til og med tilmeldingsfristen ", tbl2_EventAarAkt_T$EventAarFristDato_DW_DMAA_DW, "). Først til mølle-princip."))
 ```
 :::
 :::::::::
